manifests/tmc-sm.tanzu.japan.com/1.0.0/dex/dex.yaml
#@ load("@ytt:data", "data")
#@ load("@ytt:overlay", "overlay")
#@ load("@ytt:base64", "base64")
#@ load("@ytt:yaml", "yaml")

#@ def dex_config():
#@overlay/match missing_ok=True
#@overlay/match-child-defaults missing_ok=True
domain: #@ data.values.domain

namespace: tmc-sm-dex

static:
  secret: #@ data.values.oidc.secret
  callbacks:
  - #@ "https://pinniped-supervisor." + data.values.domain + "/provider/pinniped/callback"
openldap:
  enabled: true
  rootdn: dc=tmc,dc=dev
  group: "tmc:admin"
  ldif: #@ data.values.openldap.ldif
#@ end

#@ if data.values.dex.enabled:
apiVersion: v1
kind: Namespace
metadata:
  name: dex-install
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex
  annotations:
    cert-manager.io/cluster-issuer: tmc-local-issuer
    kapp.k14s.io/change-rule: "upsert after upserting dexpkg"
  namespace: tmc-sm-dex
spec:
  ingressClassName: tmc-local
  rules:
  - host: #@ "dex." + data.values.domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dex
            port:
              number: 5556
  tls:
  - hosts:
    - #@ "dex." + data.values.domain
    secretName: dex-cert
#@ end
